Добавление компонентов для создания и заполнения файла конфигурации

--- a/programm/data/FilesConfig.ini
+++ b/programm/data/FilesConfig.ini
@@ -1,3 +1,144 @@
-[MyGroup]
-setting1=value1
-setting2=123
+[Cartridge]
+name=Cartridge.png
+path=C:/Work/Pictures/Ammo
+size=6487
+
+[Empty]
+name=Empty.png
+path=C:/Work/Pictures/Ammo
+size=2866
+
+[Missile]
+name=Missile.png
+path=C:/Work/Pictures/Ammo
+size=6800
+
+[ButtonSmall]
+name=ButtonSmall.png
+path=C:/Work/Pictures/Buttons
+size=1800
+
+[ButtonSmallOff]
+name=ButtonSmallOff.png
+path=C:/Work/Pictures/Buttons
+size=1609
+
+[ButtonSmallOn]
+name=ButtonSmallOn.png
+path=C:/Work/Pictures/Buttons
+size=1639
+
+[ImitatorKUMZ2C43]
+name=ImitatorKUMZ2C43.png
+path=C:/Work/Pictures
+size=162358
+
+[PUO_Cartridge]
+name=PUO_Cartridge.png
+path=C:/Work/Pictures/Panels
+size=1545
+
+[PUO_Heat]
+name=PUO_Heat.png
+path=C:/Work/Pictures/Panels
+size=1943
+
+[PUO_KSO]
+name=PUO_KSO.png
+path=C:/Work/Pictures/Panels
+size=1648
+
+[PUO_Projectail]
+name=PUO_Projectail.png
+path=C:/Work/Pictures/Panels
+size=1695
+
+[PUO_SupportOff]
+name=PUO_SupportOff.png
+path=C:/Work/Pictures/Panels
+size=1925
+
+[PUO_SupportOn]
+name=PUO_SupportOn.png
+path=C:/Work/Pictures/Panels
+size=1883
+
+[PUO_SupportSelect]
+name=PUO_SupportSelect.png
+path=C:/Work/Pictures/Panels
+size=1727
+
+[PultModeGS]
+name=PultModeGS.png
+path=C:/Work/Pictures/Panels
+size=4252
+
+[PultSupportControl]
+name=PultSupportControl.png
+path=C:/Work/Pictures/Panels
+size=3616
+
+[PultDelivery0]
+name=PultDelivery0.png
+path=C:/Work/Pictures/Pults
+size=1746
+
+[PultDelivery1]
+name=PultDelivery1.png
+path=C:/Work/Pictures/Pults
+size=1827
+
+[PultDelivery2]
+name=PultDelivery2.png
+path=C:/Work/Pictures/Pults
+size=1808
+
+[PultLoader00]
+name=PultLoader00.png
+path=C:/Work/Pictures/Pults
+size=2781
+
+[PultLoader01]
+name=PultLoader01.png
+path=C:/Work/Pictures/Pults
+size=2886
+
+[PultLoader10]
+name=PultLoader10.png
+path=C:/Work/Pictures/Pults
+size=2869
+
+[PultLoader11]
+name=PultLoader11.png
+path=C:/Work/Pictures/Pults
+size=2926
+
+[Stopor-0]
+name=Stopor-0.png
+path=C:/Work/Pictures/Stopor
+size=656
+
+[Stopor-100]
+name=Stopor-100.png
+path=C:/Work/Pictures/Stopor
+size=668
+
+[Stopor-50]
+name=Stopor-50.png
+path=C:/Work/Pictures/Stopor
+size=658
+
+[TumblerSmallMiddle]
+name=TumblerSmallMiddle.png
+path=C:/Work/Pictures/Tumbler
+size=1850
+
+[TumblerSmallOff]
+name=TumblerSmallOff.png
+path=C:/Work/Pictures/Tumbler
+size=2059
+
+[TumblerSmallOn]
+name=TumblerSmallOn.png
+path=C:/Work/Pictures/Tumbler
+size=2029
