Получение размеров изображений и включение их в конфигурационный файл

--- a/programm/data/FilesConfig.ini
+++ b/programm/data/FilesConfig.ini
@@ -2,143 +2,201 @@
 name=Cartridge.png
 path=C:/Work/Pictures/Ammo
 size=6487
+width=125
+height=30
 
 [Empty]
 name=Empty.png
 path=C:/Work/Pictures/Ammo
 size=2866
+width=125
+height=30
 
 [Missile]
 name=Missile.png
 path=C:/Work/Pictures/Ammo
 size=6800
+width=125
+height=30
 
 [ButtonSmall]
 name=ButtonSmall.png
 path=C:/Work/Pictures/Buttons
 size=1800
+width=25
+height=51
 
 [ButtonSmallOff]
 name=ButtonSmallOff.png
 path=C:/Work/Pictures/Buttons
 size=1609
+width=25
+height=51
 
 [ButtonSmallOn]
 name=ButtonSmallOn.png
 path=C:/Work/Pictures/Buttons
 size=1639
+width=25
+height=51
 
 [ImitatorKUMZ2C43]
 name=ImitatorKUMZ2C43.png
 path=C:/Work/Pictures
 size=162358
+width=1381
+height=725
 
 [PUO_Cartridge]
 name=PUO_Cartridge.png
 path=C:/Work/Pictures/Panels
 size=1545
+width=81
+height=71
 
 [PUO_Heat]
 name=PUO_Heat.png
 path=C:/Work/Pictures/Panels
 size=1943
+width=71
+height=141
 
 [PUO_KSO]
 name=PUO_KSO.png
 path=C:/Work/Pictures/Panels
 size=1648
+width=261
+height=131
 
 [PUO_Projectail]
 name=PUO_Projectail.png
 path=C:/Work/Pictures/Panels
 size=1695
+width=81
+height=71
 
 [PUO_SupportOff]
 name=PUO_SupportOff.png
 path=C:/Work/Pictures/Panels
 size=1925
+width=71
+height=141
 
 [PUO_SupportOn]
 name=PUO_SupportOn.png
 path=C:/Work/Pictures/Panels
 size=1883
+width=71
+height=141
 
 [PUO_SupportSelect]
 name=PUO_SupportSelect.png
 path=C:/Work/Pictures/Panels
 size=1727
+width=71
+height=141
 
 [PultModeGS]
 name=PultModeGS.png
 path=C:/Work/Pictures/Panels
 size=4252
+width=141
+height=141
 
 [PultSupportControl]
 name=PultSupportControl.png
 path=C:/Work/Pictures/Panels
 size=3616
+width=121
+height=141
 
 [PultDelivery0]
 name=PultDelivery0.png
 path=C:/Work/Pictures/Pults
 size=1746
+width=63
+height=40
 
 [PultDelivery1]
 name=PultDelivery1.png
 path=C:/Work/Pictures/Pults
 size=1827
+width=63
+height=40
 
 [PultDelivery2]
 name=PultDelivery2.png
 path=C:/Work/Pictures/Pults
 size=1808
+width=63
+height=40
 
 [PultLoader00]
 name=PultLoader00.png
 path=C:/Work/Pictures/Pults
 size=2781
+width=101
+height=40
 
 [PultLoader01]
 name=PultLoader01.png
 path=C:/Work/Pictures/Pults
 size=2886
+width=101
+height=40
 
 [PultLoader10]
 name=PultLoader10.png
 path=C:/Work/Pictures/Pults
 size=2869
+width=101
+height=40
 
 [PultLoader11]
 name=PultLoader11.png
 path=C:/Work/Pictures/Pults
 size=2926
+width=101
+height=40
 
 [Stopor-0]
 name=Stopor-0.png
 path=C:/Work/Pictures/Stopor
 size=656
+width=81
+height=24
 
 [Stopor-100]
 name=Stopor-100.png
 path=C:/Work/Pictures/Stopor
 size=668
+width=81
+height=24
 
 [Stopor-50]
 name=Stopor-50.png
 path=C:/Work/Pictures/Stopor
 size=658
+width=81
+height=24
 
 [TumblerSmallMiddle]
 name=TumblerSmallMiddle.png
 path=C:/Work/Pictures/Tumbler
 size=1850
+width=25
+height=51
 
 [TumblerSmallOff]
 name=TumblerSmallOff.png
 path=C:/Work/Pictures/Tumbler
 size=2059
+width=25
+height=51
 
 [TumblerSmallOn]
 name=TumblerSmallOn.png
 path=C:/Work/Pictures/Tumbler
 size=2029
+width=25
+height=51
