Коррекция кириллицы в названиях

--- a/programm/Makefile
+++ b/programm/Makefile
@@ -56,7 +56,8 @@ SOURCES       = ../main.cpp \
 		../crecord.cpp 
 OBJECTS       = main.o \
 		crecord.o
-DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
+DIST          = ../Data/FilesConfig.ini \
+		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/linux.conf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/sanitize.conf \
