Добавление файла TODO_list Устранение замечаний

--- a/programm/data/FilesConfig.ini
+++ b/programm/data/FilesConfig.ini
@@ -1,9 +1,13 @@
+[RecordList]
+length=29
+
 [Cartridge]
 name=Cartridge.png
 path=C:/Work/Pictures/Ammo
 size=6487
 width=125
 height=30
+Id=1
 
 [Empty]
 name=Empty.png
@@ -11,6 +15,7 @@ path=C:/Work/Pictures/Ammo
 size=2866
 width=125
 height=30
+Id=2
 
 [Missile]
 name=Missile.png
@@ -18,6 +23,7 @@ path=C:/Work/Pictures/Ammo
 size=6800
 width=125
 height=30
+Id=3
 
 [ButtonSmall]
 name=ButtonSmall.png
@@ -25,6 +31,7 @@ path=C:/Work/Pictures/Buttons
 size=1800
 width=25
 height=51
+Id=4
 
 [ButtonSmallOff]
 name=ButtonSmallOff.png
@@ -32,6 +39,7 @@ path=C:/Work/Pictures/Buttons
 size=1609
 width=25
 height=51
+Id=5
 
 [ButtonSmallOn]
 name=ButtonSmallOn.png
@@ -39,6 +47,7 @@ path=C:/Work/Pictures/Buttons
 size=1639
 width=25
 height=51
+Id=6
 
 [ImitatorKUMZ2C43]
 name=ImitatorKUMZ2C43.png
@@ -46,6 +55,7 @@ path=C:/Work/Pictures
 size=162358
 width=1381
 height=725
+Id=7
 
 [PUO_Cartridge]
 name=PUO_Cartridge.png
@@ -53,6 +63,7 @@ path=C:/Work/Pictures/Panels
 size=1545
 width=81
 height=71
+Id=8
 
 [PUO_Heat]
 name=PUO_Heat.png
@@ -60,6 +71,7 @@ path=C:/Work/Pictures/Panels
 size=1943
 width=71
 height=141
+Id=9
 
 [PUO_KSO]
 name=PUO_KSO.png
@@ -67,6 +79,7 @@ path=C:/Work/Pictures/Panels
 size=1648
 width=261
 height=131
+Id=10
 
 [PUO_Projectail]
 name=PUO_Projectail.png
@@ -74,6 +87,7 @@ path=C:/Work/Pictures/Panels
 size=1695
 width=81
 height=71
+Id=11
 
 [PUO_SupportOff]
 name=PUO_SupportOff.png
@@ -81,6 +95,7 @@ path=C:/Work/Pictures/Panels
 size=1925
 width=71
 height=141
+Id=12
 
 [PUO_SupportOn]
 name=PUO_SupportOn.png
@@ -88,6 +103,7 @@ path=C:/Work/Pictures/Panels
 size=1883
 width=71
 height=141
+Id=13
 
 [PUO_SupportSelect]
 name=PUO_SupportSelect.png
@@ -95,6 +111,7 @@ path=C:/Work/Pictures/Panels
 size=1727
 width=71
 height=141
+Id=14
 
 [PultModeGS]
 name=PultModeGS.png
@@ -102,6 +119,7 @@ path=C:/Work/Pictures/Panels
 size=4252
 width=141
 height=141
+Id=15
 
 [PultSupportControl]
 name=PultSupportControl.png
@@ -109,6 +127,7 @@ path=C:/Work/Pictures/Panels
 size=3616
 width=121
 height=141
+Id=16
 
 [PultDelivery0]
 name=PultDelivery0.png
@@ -116,6 +135,7 @@ path=C:/Work/Pictures/Pults
 size=1746
 width=63
 height=40
+Id=17
 
 [PultDelivery1]
 name=PultDelivery1.png
@@ -123,6 +143,7 @@ path=C:/Work/Pictures/Pults
 size=1827
 width=63
 height=40
+Id=18
 
 [PultDelivery2]
 name=PultDelivery2.png
@@ -130,6 +151,7 @@ path=C:/Work/Pictures/Pults
 size=1808
 width=63
 height=40
+Id=19
 
 [PultLoader00]
 name=PultLoader00.png
@@ -137,6 +159,7 @@ path=C:/Work/Pictures/Pults
 size=2781
 width=101
 height=40
+Id=20
 
 [PultLoader01]
 name=PultLoader01.png
@@ -144,6 +167,7 @@ path=C:/Work/Pictures/Pults
 size=2886
 width=101
 height=40
+Id=21
 
 [PultLoader10]
 name=PultLoader10.png
@@ -151,6 +175,7 @@ path=C:/Work/Pictures/Pults
 size=2869
 width=101
 height=40
+Id=22
 
 [PultLoader11]
 name=PultLoader11.png
@@ -158,6 +183,7 @@ path=C:/Work/Pictures/Pults
 size=2926
 width=101
 height=40
+Id=23
 
 [Stopor-0]
 name=Stopor-0.png
@@ -165,6 +191,7 @@ path=C:/Work/Pictures/Stopor
 size=656
 width=81
 height=24
+Id=24
 
 [Stopor-100]
 name=Stopor-100.png
@@ -172,6 +199,7 @@ path=C:/Work/Pictures/Stopor
 size=668
 width=81
 height=24
+Id=25
 
 [Stopor-50]
 name=Stopor-50.png
@@ -179,6 +207,7 @@ path=C:/Work/Pictures/Stopor
 size=658
 width=81
 height=24
+Id=26
 
 [TumblerSmallMiddle]
 name=TumblerSmallMiddle.png
@@ -186,6 +215,7 @@ path=C:/Work/Pictures/Tumbler
 size=1850
 width=25
 height=51
+Id=27
 
 [TumblerSmallOff]
 name=TumblerSmallOff.png
@@ -193,6 +223,7 @@ path=C:/Work/Pictures/Tumbler
 size=2059
 width=25
 height=51
+Id=28
 
 [TumblerSmallOn]
 name=TumblerSmallOn.png
@@ -200,3 +231,4 @@ path=C:/Work/Pictures/Tumbler
 size=2029
 width=25
 height=51
+Id=29
