Создание класса cIniFile

--- a/programm/data/FilesConfigShips.ini
+++ b/programm/data/FilesConfigShips.ini
@@ -1,18 +1,18 @@
 [RecordList]
-length=104
 root_path=C:/Work/Ships
+length=104
 
-[Ancor%20Holl%201]
+[Ancor_Holl_1]
 Id=1
-name=Ancor Holl 1.jpg
+name=Ancor_Holl_1.jpg
 path=C:/Work/Ships
 size=9637
 width=238
 height=174
 
-[Ancor%20Holl%202]
+[Ancor_Holl_2]
 Id=2
-name=Ancor Holl 2.gif
+name=Ancor_Holl_2.gif
 path=C:/Work/Ships
 size=6417
 width=300
@@ -274,9 +274,9 @@ size=89800
 width=2408
 height=2281
 
-[Cruiser%20Moscow]
+[Cruiser_Moscow]
 Id=35
-name=Cruiser Moscow.png
+name=Cruiser_Moscow.png
 path=C:/Work/Ships
 size=235422
 width=960
@@ -402,34 +402,34 @@ size=32854
 width=591
 height=247
 
-[Dreadnote%20Marat%20%28model%29]
+[Dreadnote_Marat%20%28model%29]
 Id=51
-name=Dreadnote Marat (model).jpg
-path=C:/Work/Ships/Dreadnote Marat
+name=Dreadnote_Marat (model).jpg
+path=C:/Work/Ships/Dreadnote_Marat
 size=177080
 width=1200
 height=900
 
-[Dreadnote%20Marat%201]
+[Dreadnote_Marat%201]
 Id=52
-name=Dreadnote Marat 1.jpg
-path=C:/Work/Ships/Dreadnote Marat
+name=Dreadnote_Marat 1.jpg
+path=C:/Work/Ships/Dreadnote_Marat
 size=304786
 width=1280
 height=758
 
-[Dreadnote%20Marat%202]
+[Dreadnote_Marat%202]
 Id=53
-name=Dreadnote Marat 2.jpg
-path=C:/Work/Ships/Dreadnote Marat
+name=Dreadnote_Marat 2.jpg
+path=C:/Work/Ships/Dreadnote_Marat
 size=158330
 width=1024
 height=748
 
-[Dreadnote%20Marat%203]
+[Dreadnote_Marat%203]
 Id=54
-name=Dreadnote Marat 3.jpg
-path=C:/Work/Ships/Dreadnote Marat
+name=Dreadnote_Marat 3.jpg
+path=C:/Work/Ships/Dreadnote_Marat
 size=354627
 width=900
 height=718
@@ -442,42 +442,42 @@ size=72977
 width=750
 height=1008
 
-[Dreadnote%20Poltava%20%20%28left%20view%29]
+[Dreadnote_Poltava%28left_view%29]
 Id=56
-name=Dreadnote Poltava  (left view).jpg
-path=C:/Work/Ships/Dreadnote Poltava
+name=Dreadnote_Poltava(left_view).jpg
+path=C:/Work/Ships/Dreadnote_Poltava
 size=706835
 width=5000
 height=1769
 
-[Dreadnote%20Poltava%20%20%28top%20view%29]
+[Dreadnote_Poltava%28top_view%29]
 Id=57
-name=Dreadnote Poltava  (top view).jpg
-path=C:/Work/Ships/Dreadnote Poltava
+name=Dreadnote_Poltava(top_view).jpg
+path=C:/Work/Ships/Dreadnote_Poltava
 size=1079343
 width=5000
 height=1351
 
-[Dreadnote%20Sevastopol%20%28full%20top%20view%29]
+[Dreadnote_Sevastopol%28full_top_view%29]
 Id=58
-name=Dreadnote Sevastopol (full top view).png
-path=C:/Work/Ships/Dreadnote Sevastopol
+name=Dreadnote_Sevastopol(full_top_view).png
+path=C:/Work/Ships/Dreadnote_Sevastopol
 size=642131
 width=2215
 height=408
 
-[Dreadnote%20Sevastopol%202]
+[Dreadnote_Sevastopol_2]
 Id=59
-name=Dreadnote Sevastopol 2.gif
-path=C:/Work/Ships/Dreadnote Sevastopol
+name=Dreadnote_Sevastopol_2.gif
+path=C:/Work/Ships/Dreadnote_Sevastopol
 size=112969
 width=1416
 height=2160
 
-[Dreadnote%20Sevastopol%205]
+[Dreadnote_Sevastopol_5]
 Id=60
-name=Dreadnote Sevastopol 5.jpg
-path=C:/Work/Ships/Dreadnote Sevastopol
+name=Dreadnote_Sevastopol_5.jpg
+path=C:/Work/Ships/Dreadnote_Sevastopol
 size=499613
 width=1203
 height=948
@@ -490,17 +490,17 @@ size=16842
 width=702
 height=500
 
-[Submarine%20Komsomoletz]
+[Submarine_Komsomoletz]
 Id=62
-name=Submarine Komsomoletz.jpg
+name=Submarine_Komsomoletz.jpg
 path=C:/Work/Ships
 size=19182
 width=590
 height=227
 
-[Submarine%20type%20SH-108]
+[Submarine_type_SH-108]
 Id=63
-name=Submarine type SH-108.gif
+name=Submarine_type_SH-108.gif
 path=C:/Work/Ships
 size=51227
 width=775
@@ -722,9 +722,9 @@ size=173386
 width=924
 height=596
 
-[Torpedo-boat%20G-5%20%28theoretical%20drawing%29]
+[Torpedo-boat_G-5%28theoretical_drawing%29]
 Id=92
-name=Torpedo-boat G-5 (theoretical drawing).gif
+name=Torpedo-boat_G-5(theoretical_drawing).gif
 path=C:/Work/Ships/Torpedo-boat G-5
 size=23980
 width=750
@@ -825,123 +825,3 @@ path=C:/Work/Ships
 size=370403
 width=760
 height=608
-
-[Ancor%20Holl_2]
-Id=1
-name=Ancor Holl_2.gif
-path=C:/Work/Ships
-size=6417
-width=300
-height=465
-
-[Ancor_Holl_1]
-Id=2
-name=Ancor_Holl_1.jpg
-path=C:/Work/Ships
-size=9637
-width=238
-height=174
-
-[Cruiser_Moscow]
-Id=35
-name=Cruiser_Moscow.png
-path=C:/Work/Ships
-size=235422
-width=960
-height=540
-
-[Dreadnote_Marat%20%28model%29]
-Id=51
-name=Dreadnote_Marat (model).jpg
-path=C:/Work/Ships/Dreadnote_Marat
-size=177080
-width=1200
-height=900
-
-[Dreadnote_Marat%201]
-Id=52
-name=Dreadnote_Marat 1.jpg
-path=C:/Work/Ships/Dreadnote_Marat
-size=304786
-width=1280
-height=758
-
-[Dreadnote_Marat%202]
-Id=53
-name=Dreadnote_Marat 2.jpg
-path=C:/Work/Ships/Dreadnote_Marat
-size=158330
-width=1024
-height=748
-
-[Dreadnote_Marat%203]
-Id=54
-name=Dreadnote_Marat 3.jpg
-path=C:/Work/Ships/Dreadnote_Marat
-size=354627
-width=900
-height=718
-
-[Dreadnote_Poltava%28left_view%29]
-Id=56
-name=Dreadnote_Poltava(left_view).jpg
-path=C:/Work/Ships/Dreadnote_Poltava
-size=706835
-width=5000
-height=1769
-
-[Dreadnote_Poltava%28top_view%29]
-Id=57
-name=Dreadnote_Poltava(top_view).jpg
-path=C:/Work/Ships/Dreadnote_Poltava
-size=1079343
-width=5000
-height=1351
-
-[Dreadnote_Sevastopol%28full_top_view%29]
-Id=58
-name=Dreadnote_Sevastopol(full_top_view).png
-path=C:/Work/Ships/Dreadnote_Sevastopol
-size=642131
-width=2215
-height=408
-
-[Dreadnote_Sevastopol_2]
-Id=59
-name=Dreadnote_Sevastopol_2.gif
-path=C:/Work/Ships/Dreadnote_Sevastopol
-size=112969
-width=1416
-height=2160
-
-[Dreadnote_Sevastopol_5]
-Id=60
-name=Dreadnote_Sevastopol_5.jpg
-path=C:/Work/Ships/Dreadnote_Sevastopol
-size=499613
-width=1203
-height=948
-
-[Submarine_Komsomoletz]
-Id=62
-name=Submarine_Komsomoletz.jpg
-path=C:/Work/Ships
-size=19182
-width=590
-height=227
-
-[Submarine_type_SH-108]
-Id=63
-name=Submarine_type_SH-108.gif
-path=C:/Work/Ships
-size=51227
-width=775
-height=588
-
-[Torpedo-boat_G-5%28theoretical_drawing%29]
-Id=92
-name=Torpedo-boat_G-5(theoretical_drawing).gif
-path=C:/Work/Ships/Torpedo-boat G-5
-size=23980
-width=750
-height=430
